--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0.91"
 serde = { version = "1.0.152", features = ["derive"]}
 notify = "5.0.0"
 chrono = "0.4.23"
+clap = { version = "4.0.32", features = ["derive"] }
