--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ notify = "5.0.0"
 chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["derive"] }
 simple-websockets = "0.1.4"
+
+[profile.release]
+strip = true
+lto = true
