--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ notify = "5.0.0"
 chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["derive"] }
 simple-websockets = "0.1.4"
+notify-debouncer-mini = { version = "*", default-features = false }
 
 [profile.release]
 strip = true
